#4 fix install fontawesome and link in index.html, reset tag a,remove spacing in button.scss, height in navbar,table.scss,import file container and add spacing in utilities.scss

--- a/bigPractice/src/styles/bases/_reset.scss
+++ b/bigPractice/src/styles/bases/_reset.scss
@@ -85,6 +85,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  text-decoration: none;
 }
 
 /* make sure to set some focus styles for accessibility */
