--- a/bigPractice/src/styles/components/_button.scss
+++ b/bigPractice/src/styles/components/_button.scss
@@ -1,6 +1,5 @@
 .btn__new {
   margin: 17px;
-  padding: 8px;
   background-color: $color-info;
   color: $color-light;
   border: none;
