--- a/bigPractice/src/styles/components/_table.scss
+++ b/bigPractice/src/styles/components/_table.scss
@@ -1,6 +1,4 @@
 .table {
-  width: 1003px;
-  height: 96vh;
-  margin: 12px 0 0 12px;
+  width: 100%;
   background-color: $color-light;
 }
